# phy905-proj

./: .gitignore  analyze.py  configure.ac  data-2.txt  job.sh  project.tex  proposal.tex
src/: Makefile.am  basis.cpp  basis.h  benchmark.c  benchmark.h  error.c  error.h  grain.cpp  grain.h  macros.h  main.c  math.h  mpi.c  mpi.h  statistics.c  statistics.h  string.c  string.h  utils.c  utils.h  wclock.c  wclock.h  wclock_config.h
src/compat/: noreturn_begin.h  noreturn_end.h
